--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "input.css";
+@import "button.css";
+
+.flex::before,
+.flex::after {
+    display: none !important;
+}
+
+@layer components {
+
+
+}
