--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "input.css";
-@import "button.css";
+
+@import "./input.css";
+@import "./button.css";
+@import "./sidebar.css";
 
 .flex::before,
 .flex::after {
